<resources>
    <string name="app_name">Car Doctor</string>
    <string name="Msg1">Admin Login</string>
    <string name="msg2">Enter Username</string>
    <string name="msg3">Enter Password</string>
    <string name="msg4">Car Doctor</string>
    <string name="msg5">Remember me</string>
    <string name="btn1">Login</string>
    <string name="msg6">Admin</string>
    <string name="btn2">View Sellers</string>
    <string name="btn3">View Customers</string>
    <string name="btn4">View Pending Items</string>
    <string name="btn5">View Pending Items</string>
    <string name="btn6">View Posted Items</string>
    <string name="msg7">Sellers</string>
    <string name="msg8">Customers</string>
    <string name="msg9">Pending items</string>
    <string name="msg11">Posted Items</string>
    <string name="msg12">Name - B.G.Nilan\nSellor Code - 1002</string>
    <string name="msg13">Name - N.J.Ashan\nSellor Code - 1098</string>
    <string name="btn8">View Profile</string>
    <string name="msg14">Name - M.S. Gayan\nSeller Code - 1890</string>
    <string name="msg15">Seller Profile</string>
    <string name="msg16">  Name - N.J. Ashan\n\n Sellor Code - 1098\n\n Sellor Phone No. - 0713139343\n\n Sellor Address - No.05, Galle  Rd,Colombo\n\n Sellor Email - swd100@gmail.com</string>
    <string name="btn17">Items</string>
    <string name="btn18">Delete Seller</string>
    <string name="msg19">Pending Items</string>
    <string name="msg20">Pending Items</string>
    <string name="msg21">Item - Moodles Alloy wheels\n\n Seller - H.H. Nimal</string>
    <string name="msg22">View Item</string>
    <string name="msg23">Item - Side mirrors\n\n Seller - J.L. Rashen</string>
    <string name="msg24">Item code - 1001\n\n Item - Moodles alloy wheels\n\n Seller - G.H. Nimal</string>
    <string name="msg25">Description - 14"X 6 JJ 4 Short \n\t\t                  Hole Alloy Wheels\n\t\t                  good condition.</string>
    <string name="msg26">Price - Rs 12000</string>
    <string name="btn27">Approve</string>
    <string name="btn28">Reject</string>
    <string name="msg30">Approval Item</string>
    <string name="msg31">Item - Car Wipers\n\n Seller - B.K.Lasantha</string>
    <string name="btn35">Delete item</string>
    <string name="msg35">Posted Items</string>
    <string name="msg36">Item - Car carpet\n\n Seller - M.M.Muhadh</string>
    <string name="msg37">View Pending Drivers</string>
    <string name="msg38">Pending Drivers -1</string>
    <string name="msg39">Name - N.G. Manilka\n\n Email - manilka12@gmail.com\n\n Address- No.89, Thalawa, Galle.\n\n Phone No -  0771264783 \n\n NIC - 889303003V\n\n Licence No- 87398373928</string>
    <string name="btn40">Full Income</string>
    <string name="msg42">Seller\'s Full Income</string>
    <string name="msg43">Sold Out Items</string>
    <string name="msg44">Selling Fee - </string>
    <string name="btn45">calculat selling price</string>
    <string name="msg46">Selling Price - </string>
    <string name="msg48">Posted Items</string>
    <string name="btn50">Delete Item</string>
    <string name="msg50">Name - S.S. Deshan\n Customer Code - 696 </string>
    <string name="msg51">Customers</string>
    <string name="msg52">Name - S.A. Ashan\n Customer Code - 766</string>
    <string name="msg53">Customer Profile</string>
    <string name="msg54">Customer ID - 94940\n\nName - N.G. Manilka\n\n Email - manilka12@gmail.com\n\n Address- No.89, Thalawa, Galle.\n\n Phone No -  0771264783 \n\n NIC - 88593030V</string>
</resources>